--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "volta": {
+    "node": "14.17.0"
   }
 }
