--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 2,
   "name": "Chrome Extension with React & Webpack",
   "options_page": "options.html",
-  "background": { "service_worker": "background.bundle.js" },
+  "background": { "scripts": ["background.bundle.js"] },
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon-34.png"
@@ -16,15 +16,8 @@
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*", "<all_urls>"],
-      "js": ["contentScript.bundle.js"],
-      "css": ["content.styles.css"]
+      "js": ["contentScript.bundle.js"]
     }
   ],
-  "devtools_page": "devtools.html",
-  "web_accessible_resources": [
-    {
-      "resources": ["content.styles.css", "icon-128.png", "icon-34.png"],
-      "matches": []
-    }
-  ]
+  "devtools_page": "devtools.html"
 }
